[package]
name = "rusty-apple"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies]
bevy = { version = "0.13.0" }
bevy_xpbd_2d = "0.4.2"
leafwing-input-manager = "0.13.3"
enum-iterator = "2.0.0"
rand = "0.8"
bevy_egui = "0.25"
pathfinding = "4.9.1"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
